idf_component_register(SRCS "test02.c"
                            "tfa9879.c"
                            "tfa9879.h"
                            "sdcard.c"
                            "sdcard.h"
                            "audio_pipeline.c"
                            "audio_pipeline.h"
                            "test_audio.h"
                    INCLUDE_DIRS ".")
